--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "webpack-merge": "^5.1.1"
     },
     "dependencies": {
+        "@dnd-kit/core": "^6.0.5",
+        "@dnd-kit/sortable": "^7.0.1",
         "arccorp-vars": "^0.2.1",
         "node-polyfill-webpack-plugin": "^1.1.4",
         "react": "^16.13.1",
