--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "dependencies": {
         "@dnd-kit/core": "^6.0.5",
         "@dnd-kit/sortable": "^7.0.1",
+        "@heroicons/react": "^2.0.13",
         "arccorp-vars": "^0.2.1",
         "node-polyfill-webpack-plugin": "^1.1.4",
         "react": "^16.13.1",
         "react-app-polyfill": "^1.0.6",
+        "react-bootstrap": "^2.7.0",
         "react-dom": "^16.13.1",
         "react-loading": "^2.0.3"
     }
