--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@dnd-kit/core": "^6.0.5",
         "@dnd-kit/sortable": "^7.0.1",
         "@heroicons/react": "^2.0.13",
+        "@tinymce/tinymce-react": "^4.3.0",
         "arccorp-vars": "^0.2.1",
         "node-polyfill-webpack-plugin": "^1.1.4",
         "react": "^16.13.1",
