--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-app-polyfill": "^1.0.6",
         "react-bootstrap": "^2.7.0",
         "react-dom": "^16.13.1",
-        "react-loading": "^2.0.3"
+        "react-loading": "^2.0.3",
+        "react-serialize": "^0.2.1"
     }
 }
