--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-bootstrap": "^2.7.0",
         "react-dom": "^16.13.1",
         "react-loading": "^2.0.3",
+        "react-modal": "^3.16.1",
         "react-serialize": "^0.2.1"
     }
 }
